--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               </div>
               <div class="now-detail overflow-hidden transition-all duration-500" style="max-height: 0; opacity: 0;">
                 <p class="text-[0.875rem] text-[hsl(var(--text-quiet))] pl-0 md:pl-20">
-                  hiring, architecture decisions, code reviews
+                  architecture decisions, code reviews
                 </p>
               </div>
             </div>
